# wgpu-bootstrap

./: Cargo.toml  README.md
examples/: blue.wgsl  compute.rs  compute.wgsl  icosahedron.rs  instances.rs  lines.rs  shader.wgsl  shader_instances.wgsl  simple_texture.rs  wireframe.rs
examples/cube/: cube_app.rs  main.rs  shader.wgsl
examples/gui/: gui_app.rs  main.rs
examples/instances/: instances_app.rs  main.rs  shader.wgsl
examples/shading/: main.rs  shader.wgsl  shading_app.rs
examples/triangle/: main.rs  shader.wgsl  triangle_app.rs
examples/wireframe/: main.rs  wireframe_app.rs
src/: application.rs  camera.rs  computation.rs  context.rs  default.rs  egui_layer.rs  frame.rs  geometry.rs  lib.rs  main.rs  runner.rs  shader.wgsl  texture.rs  window.rs
src/util/: orbit_camera.rs
src/utils/: mod.rs
