[package]
name = "wgpu-bootstrap"
version = "0.2.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
pollster = "0.3"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
egui = "0.23"
egui_wgpu_backend = "0.26"
egui_winit_platform = "0.20"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
