[package]
name = "wgpu-bootstrap"
version = "0.4.2"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
eframe = { version = "0.29", features = ["wgpu"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
